X libs and TK_LIB_PATH all merged into TK_LIBS PVM_LIB_PATH  merged into PVM_LIBS

--- a/src/utils/makemake.in
+++ b/src/utils/makemake.in
@@ -30,15 +30,9 @@ OMNETPP_LIB_PATH="@OMNETPP_LIB_PATH@"
 OMNETPP_INCLUDES="@OMNETPP_INCLUDES@"
 
 TV_LIBS="@TV_LIBS@"
-X_LIBS="@X_LIBS@"
 TK_LIBS="@TK_LIBS@"
 PVM_LIBS="@PVM_LIBS@"
 SYS_LIBS="@SYS_LIBS@"
-
-TV_LIB_PATH="@TV_LIB_PATH@"
-X_LIB_PATH="@X_LIB_PATH@"
-TK_LIB_PATH="@TK_LIB_PATH@"
-PVM_LIB_PATH="@PVM_LIB_PATH@"
 
 #
 # process command line args
@@ -257,24 +251,18 @@ OMNETPP_INCL_PATH=$OMNETPP_INCL_PATH
 OMNETPP_LIB_PATH=$OMNETPP_LIB_PATH
 
 TV_LIBS=$TV_LIBS
-X_LIBS=$X_LIBS
 TK_LIBS=$TK_LIBS
 PVM_LIBS=$PVM_LIBS
 SYS_LIBS=$SYS_LIBS
 
-TV_LIB_PATH=$TV_LIB_PATH
-TK_LIB_PATH=$TK_LIB_PATH
-X_LIB_PATH=$X_LIB_PATH
-PVM_LIB_PATH=$PVM_LIB_PATH
-
 # User interface libs
 CMDENV_LIBS = -lenvir -lcmdenv
-TVENV_LIBS = -lenvir -ltvenv \$(TV_LIB_PATH) \$(TV_LIBS)
-TKENV_LIBS = -lenvir -ltkenv \$(TK_LIB_PATH) \$(TK_LIBS) \$(X_LIB_PATH) \$(X_LIBS)
+TVENV_LIBS = -lenvir -ltvenv \$(TV_LIBS)
+TKENV_LIBS = -lenvir -ltkenv \$(TK_LIBS)
 
 # Simulation kernel
 STD_KERNEL_LIBS = -lsim_std
-PVM_KERNEL_LIBS = -lsim_pvm \$(PVM_LIB_PATH) \$(PVM_LIBS)
+PVM_KERNEL_LIBS = -lsim_pvm \$(PVM_LIBS)
 
 # Simulation kernel and user interface libraries
 OMNETPP_LIBS = \$(OMNETPP_LIB_PATH) \$(KERNEL_LIBS) \$(USERIF_LIBS) \$(SYS_LIBS)
