--- a/configure.in
+++ b/configure.in
@@ -122,7 +122,8 @@ OMNETPP_BITMAP_PATH='$(OMNETPP_ROOT)/bitmaps'
 
 OMNETPP_INCL_PATH='-I$(OMNETPP_SRC_DIR)/sim'
 OMNETPP_LIB_PATH='-L$(OMNETPP_ROOT)/lib'
-OMNETPP_INCLUDES=
+
+OMNETPP_INCLUDES='$(wildcard $(OMNETPP_SRC_DIR)/sim/*.h $(OMNETPP_SRC_DIR)/envir/*.h)'
 
 #
 # a=static, so=shared libraries.
@@ -135,46 +136,45 @@ LIB_SUFFIX='a'
 #
 # Compile options. Use -g for debugging, -O3... for speed.
 #
-# CFLAGS='-g'
+# CFLAGS='-g -Wall'
 CFLAGS='-O3 -DNDEBUG=1'
 
-OMNETPP_INCLUDES='(wildcard $(OMNETPP_SRC_DIR)/sim/*.h $(OMNETPP_SRC_DIR)/envir/*.h)'
-
 #----------------------
 # Subtitutions.
 #----------------------
-AC_SUBST( YACC)
-AC_SUBST( LEX)
-AC_SUBST( CC)
-AC_SUBST( CXX)
-AC_SUBST( NEDC)
-AC_SUBST( AS)
-AC_SUBST( AR)
-AC_SUBST( MAKE_SO)
-AC_SUBST( LD)
+AC_SUBST(YACC)
+AC_SUBST(LEX)
+AC_SUBST(CC)
+AC_SUBST(CXX)
+AC_SUBST(NEDC)
+AC_SUBST(AS)
+AC_SUBST(AR)
+AC_SUBST(MAKE_SO)
+AC_SUBST(LD)
 
-AC_SUBST( LIB_SUFFIX)
-AC_SUBST( USE_DLOPEN)
-AC_SUBST( TV_INCL_PATH)
-AC_SUBST( TV_LIBS)
-AC_SUBST( TK_INCL_PATH)
-AC_SUBST( TK_LIBS)
-AC_SUBST( PVM_INCL_PATH PVM_LIBS)
-AC_SUBST( SYS_LIBS)
+AC_SUBST(LIB_SUFFIX)
+AC_SUBST(USE_DLOPEN)
+AC_SUBST(TV_INCL_PATH)
+AC_SUBST(TV_LIBS)
+AC_SUBST(TK_INCL_PATH)
+AC_SUBST(TK_LIBS)
+AC_SUBST(PVM_INCL_PATH PVM_LIBS)
+AC_SUBST(SYS_LIBS)
 
-AC_SUBST( OMNETPP_ROOT)
-AC_SUBST( OMNETPP_SRC_DIR)
-AC_SUBST( OMNETPP_SAMPLES_DIR)
-AC_SUBST( OMNETPP_MODELS_DIR)
-AC_SUBST( OMNETPP_INCLUDES)
-AC_SUBST( OMNETPP_INCL_PATH)
-AC_SUBST( OMNETPP_LIB_PATH)
-AC_SUBST( OMNETPP_BITMAP_PATH)
+AC_SUBST(OMNETPP_ROOT)
+AC_SUBST(OMNETPP_SRC_DIR)
+AC_SUBST(OMNETPP_SAMPLES_DIR)
+AC_SUBST(OMNETPP_MODELS_DIR)
+AC_SUBST(OMNETPP_INCLUDES)
+AC_SUBST(OMNETPP_INCL_PATH)
+AC_SUBST(OMNETPP_LIB_PATH)
+AC_SUBST(OMNETPP_BITMAP_PATH)
 
 #----------------------
-# Subtitutions.
+# Generate files.
 #----------------------
 AC_OUTPUT(
+  Makefile
   src/cmdenv/makefile
   src/envir/makefile
   src/gned/makefile
